--- a/slides/index.html
+++ b/slides/index.html
@@ -177,7 +177,8 @@
 
 
             <section>
-                <h2>CSRF</h2><h2>CSRF</h2>
+                <h2>CSRF</h2>
+                <h2>CSRF</h2>
             </section>
 
 
