--- a/slides/index.html
+++ b/slides/index.html
@@ -155,6 +155,16 @@
             </section>
 
             <section data-auto-animate>
+                <h3>Vol d'informations</h3>
+                <p>
+                    <strong>Session</strong> et les <strong>Cookies</strong>
+                </p>
+                <p>
+                    <strong>KeyLogger</strong> en JS
+                </p>
+            </section>
+
+            <section data-auto-animate>
                 <h3>Rendre indisponible le service</h3>
             </section>
 
@@ -173,6 +183,16 @@
                 <p>
                     <strong>Refresh</strong> de la page
                 </p>
+            </section>
+
+            <section>
+                <h3>Une video qui résume bien</h3>
+
+                <iframe width="994" height="559" src="https://www.youtube.com/embed/Bkg7JoBs2ac"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
             </section>
 
 
