--- a/slides/index.html
+++ b/slides/index.html
@@ -178,7 +178,66 @@
 
             <section>
                 <h2>CSRF</h2>
-                <h2>CSRF</h2>
+            </section>
+
+            <section data-auto-animate>
+                <h3>Cross-Site Request Forgery</h3>
+            </section>
+
+            <section data-auto-animate>
+                <h3>Cross-Site Request Forgery</h3>
+                <p>
+                   Aussi appelé  <strong>sea surf</strong>
+                </p>
+            </section>
+
+            <section data-auto-animate>
+                <h3>Idée</h3>
+            </section>
+
+            <section data-auto-animate>
+                <h3>Idée</h3>
+                <p>
+                    Exécuter un <strong>script</strong> à l’insu de l’utilisateur 
+                 </p>
+            </section>
+
+            <section data-auto-animate>
+                <h3>Idée</h3>
+                <p>
+                    Exécuter un <strong>script</strong> à l’insu de l’utilisateur 
+                </p>
+                <p>
+                    Cela peut se faire au travers d'une <strong>image</strong> ou d'un site qui soumet un <strong>formulaire</strong>
+                </p>
+            </section>
+
+            <section data-auto-animate>
+                <h3>CSRF Token</h3>
+            </section>
+
+            <section data-auto-animate>
+                <h3>CSRF Token</h3>
+                <ul>
+                    <li>Généré aléatoirement</li>
+                </ul>
+            </section>
+
+            <section data-auto-animate>
+                <h3>CSRF Token</h3>
+                <ul>
+                    <li>Généré aléatoirement</li>
+                    <li>Sécurise les requêtes <br /><i>ex : ?id=27&<strong>token=45421587d1s548s</strong></i></li>
+                </ul>
+            </section>
+
+            <section data-auto-animate>
+                <h3>CSRF Token</h3>
+                <ul>
+                    <li>Généré aléatoirement</li>
+                    <li>Sécurise les requêtes <i>ex : ?id=27&<strong>token=45421587d1s548s</strong></i></li>
+                    <li>L'attaquant de peut donc jamais le connaître</li>
+                </ul>
             </section>
 
 
