--- a/slides/index.html
+++ b/slides/index.html
@@ -236,11 +236,27 @@
                 <ul>
                     <li>Généré aléatoirement</li>
                     <li>Sécurise les requêtes <i>ex : ?id=27&<strong>token=45421587d1s548s</strong></i></li>
-                    <li>L'attaquant de peut donc jamais le connaître</li>
+                    <li>L'attaquant ne peut donc jamais le connaître</li>
                 </ul>
             </section>
-
-
+            <section>
+                <section>
+                    <h2>Exemple 1</h2>
+                    <p>Attaque csrf avec execution de formulaire</p>
+                </section>
+                <section>
+                    <img data-src="/dist/images/csrf-form.png" style="width: 80%;" alt="csrf form exemple">
+                </section>
+            </section>
+            <section>
+                <section>
+                    <h2>Exemple 2</h2>
+                    <p>Attaque csrf avec chargement d'image</p>
+                </section>
+                <section>
+                    <img data-src="/dist/images/csrf-img.svg" style="width: 80%;" alt="miss code">
+                </section>
+            </section>
         </div>
 
     </div>
