--- a/slides/index.html
+++ b/slides/index.html
@@ -114,7 +114,6 @@
                     <img data-src="/dist/images/Dealabs_hello.png" style="width: 80%;" alt="dealabs home">
                 </section>
             </section>
-
             <section>
                 <section>
                     <h2>Exemple</h2>
@@ -129,31 +128,25 @@
                     <img data-src="/dist/images/XSS_URL_2.png" style="width: 80%;" alt="dealabs home">
                 </section>
             </section>
-
             <section>
                 <h2>Les applications</h2>
             </section>
-
             <section data-auto-animate>
                 <h3>Redirection</h3>
             </section>
-
             <section data-auto-animate>
                 <h3>Redirection</h3>
                 <p>hameçonnage</p>
             </section>
-
             <section data-auto-animate>
                 <h3>Vol d'informations</h3>
             </section>
-
             <section data-auto-animate>
                 <h3>Vol d'informations</h3>
                 <p>
                     <strong>Session</strong> et les <strong>Cookies</strong>
                 </p>
             </section>
-
             <section data-auto-animate>
                 <h3>Rendre indisponible le service</h3>
             </section>
@@ -164,7 +157,6 @@
                     <strong>Boucle infinie</strong> d'alertes
                 </p>
             </section>
-
             <section data-auto-animate>
                 <h3>Rendre indisponible le service</h3>
                 <p>
@@ -272,6 +264,16 @@
                         <li>Mettre des guards sur les actions sensibles de l'application</li>
                     </ul>
                 </section>
+            </section>
+            <section>
+                <h2>Plus de references: </h2>
+                <p><a href="https://cheatsheetseries.owasp.org/cheatsheets/Cross-Site_Request_Forgery_Prevention_Cheat_Sheet.html">OWASP CSRF page</a></p>
+                <p><a href="https://developer.mozilla.org/en-US/docs/Glossary/CORS">Cross Origin Request Policy from the web bible</a></p>
+            </section>
+            <section>
+                <h3>Merci pour votre attention !</h3>
+                <h3>Des questions ?</h3>
+                <iframe src="https://giphy.com/embed/IB9foBA4PVkKA" width="480" height="474" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/dancing-dance-excited-IB9foBA4PVkKA">via GIPHY</a></p>
             </section>
         </div>
     </div>
