--- a/slides/index.html
+++ b/slides/index.html
@@ -261,15 +261,6 @@
                     <li>Sécurise les requêtes <br /><i>ex : ?id=27&<strong>token=45421587d1s548s</strong></i></li>
                 </ul>
             </section>
-
-            <section data-auto-animate>
-                <h3>CSRF Token</h3>
-                <ul>
-                    <li>Généré aléatoirement</li>
-                    <li>Sécurise les requêtes <br /><i>ex : ?id=27&<strong>token=45421587d1s548s</strong></i></li>
-                    <li>L'attaquant ne peut donc jamais le connaître</li>
-                </ul>
-            </section>
             <section>
                 <section>
                     <h2>Exemple 1</h2>
@@ -304,24 +295,32 @@
                     </ul>
                 </section>
             </section>
+            <section data-auto-animate>
+                <h3>CSRF Token</h3>
+                <ul>
+                    <li>Généré aléatoirement</li>
+                    <li>Sécurise les requêtes <br /><i>ex : ?id=27&<strong>token=45421587d1s548s</strong></i></li>
+                    <li>L'attaquant ne peut donc jamais le connaître</li>
+                </ul>
+            </section>
             <section>
-                <h2>Plus de references: </h2>
-                <p><a href="https://cheatsheetseries.owasp.org/cheatsheets/Cross-Site_Request_Forgery_Prevention_Cheat_Sheet.html">OWASP CSRF page</a></p>
-                <p><a href="https://developer.mozilla.org/en-US/docs/Glossary/CORS">Cross Origin Request Policy from the web bible</a></p>
+                <h2>Plus de references :</h2>
+                <ul>
+                    <li><a href="https://cheatsheetseries.owasp.org/cheatsheets/Cross-Site_Request_Forgery_Prevention_Cheat_Sheet.html">OWASP CSRF page</a></li>
+                    <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/CORS">Cross Origin Request Policy from the web bible</a></li>
+                </ul>
+            </section>
+            <section>
+                <h3>Une video qui résume bien</h3>
+                <iframe width="994" height="559" src="https://www.youtube.com/embed/X7SPRJaPL9c"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
             </section>
             <section>
                 <h3>Merci pour votre attention !</h3>
                 <h3>Des questions ?</h3>
-                <iframe src="https://giphy.com/embed/IB9foBA4PVkKA" width="480" height="474" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/dancing-dance-excited-IB9foBA4PVkKA">via GIPHY</a></p>
-            </section>
-
-            <section>
-                <h3>Une video qui résume bien</h3>
-                <iframe width="994" height="559" src="https://www.youtube.com/embed/X7SPRJaPL9c" 
-                        title="YouTube video player" frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                </iframe>
-
+                <iframe src="https://giphy.com/embed/IB9foBA4PVkKA" width="350" height="345" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/dancing-dance-excited-IB9foBA4PVkKA">via GIPHY</a></p>
             </section>
         </div>
     </div>
